# PyEPR

./: .buildinfo  .gitignore  API_docs.html  README.html  README.md  citation.html  citation.rst  dataset.html  genindex.html  index.html  install.html  licence.html  objects.inv  py-modindex.html  pyproject.toml  releasenotes.html  search.html  searchindex.js  sequencer.html  setup.flake8  sg_execution_times.html  tutorial.html  tutorial_hardware.html  tutorial_loading.html  tutorial_sequencer.html
.doctrees/: API_docs.doctree  README.doctree  citation.doctree  dataset.doctree  environment.pickle  index.doctree  install.doctree  licence.doctree  releasenotes.doctree  sequencer.doctree  sg_execution_times.doctree  tutorial.doctree  tutorial_hardware.doctree  tutorial_loading.doctree  tutorial_sequencer.doctree
.doctrees/auto_examples/: index.doctree  sg_execution_times.doctree
.doctrees/examples/: GALLERY_HEADER.doctree
.github/workflows/: Build_Deploy_Docs.yml  PyPI_upload.yml  TestBuild_Docs.yml  TestPyPI_Upload.yml  main.yml  python-publish.yml
_modules/: index.html
_modules/pyepr/: _version.html  colors.html  config.html  criteria.html  dataset.html  fieldsweep_analysis.html  pulses.html  relaxation_analysis.html  resonator_profile_analysis.html  tools.html  utils.html
_sources/: API_docs.rst.txt  dataset.rst.txt  index.rst.txt  install.rst.txt  releasenotes.rst.txt  tutorial_loading.md.txt
_sources/auto_examples/: index.rst.txt
_static/: documentation_options.js
auto_examples/: index.html  sg_execution_times.html
autoapi/pyepr/: CPMGDetection.html  CarrPurcellAnalysis.html  CarrPurcellSequence.html  ChirpPulse.html  Criteria.html  Delay.html  Detection.html  EPRAccessor.html  FieldSweepAnalysis.html  FieldSweepSequence.html  FrequencySweptPulse.html  GaussianPulse.html  HSPulse.html  HahnEchoRelaxationAnalysis.html  HahnEchoRelaxationSequence.html  HahnEchoSequence.html  Interface.html  Parameter.html  Pulse.html  (+15 more)
docsrc/: API_docs.rst  README.md  citation.rst  conf.py  conf_old.py  index.rst  install.rst  releasenotes.rst  tutorial.rst  tutorial_hardware.md  tutorial_sequencer.md
examples/: GALLERY_HEADER.html
pyepr/: _version.py  classes.py  criteria.py  dataset.py  fieldsweep_analysis.py  pulses.py  relaxation_analysis.py  resonator_profile_analysis.py  sequences.py  tools.py  utils.py
tests/: test_classes.py  test_criteria.py  test_dataset.py  test_dummy.py  test_fieldsweep.py  test_resonator_profile_analysis.py  test_sequences.py
(+327 files in other folders)
