[tool.poetry]
name = "pyEPR-ESR"
version = "1.0.2"
description = ""
authors = ["Hugo Karas <hkaras@ethz.ch>", "Gunnar Jeschke <gjeschke@eth.ch>", "Stefan Stoll <stst@uw.edu>"]
readme = "README.md"
packages = [
    { include = "pyepr" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = ">2.1"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
pyyaml = "^6.0.2"
xarray = ">=2025"
h5netcdf = "^1.4.0"
toml = "^0.10.2"
deerlab = "^1.1.4"
numba = ">=0.60.0"
psutil = "^7.1.3"


[tool.poetry.group.dev.dependencies]
gitpython = "^3.1.43"
pytest = "^8.3.3"


[tool.poetry.group.doc.dependencies]
furo = {version = "^2024.8.6"}
autoapi = {version = "^2.0.1"}
sphinx = {version = "^8.1.3"}
sphinx-autoapi = "^3.3.3"
sphinx-toolbox = "^3.8.1"
sphinx-copybutton = "^0.5.2"
numpydoc = "^1.8.0"
sphinx-favicon = "^1.0.1"
sphinx-autobuild = "^2025.8.25"
sphinx-gallery = "^0.19.0"
myst-parser = "^4.0.1"
sphinx-design = "^0.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
